Fixed problem with missing colors for status icons.

--- a/src/scss/grommet-core/_objects.icon.scss
+++ b/src/scss/grommet-core/_objects.icon.scss
@@ -87,14 +87,6 @@
     fill: map-get($brand-status-colors, unknown);
   }
 
-  @each $status, $color in $brand-status-colors {
-    .#{$grommet-namespace}control-icon-#{$status} {
-      .#{$grommet-namespace}status-icon__base {
-        fill: $color;
-      }
-    }
-  }
-
   &-label {
     .#{$grommet-namespace}status-icon__base {
       fill: map-get($brand-status-colors, unknown);
@@ -137,6 +129,14 @@
 
     .#{$grommet-namespace}status-icon__detail {
       display: none;
+    }
+  }
+}
+
+@each $status, $color in $brand-status-colors {
+  .#{$grommet-namespace}status-icon-#{$status} {
+    .#{$grommet-namespace}status-icon__base {
+      fill: $color;
     }
   }
 }
